--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3image.dtx Copyright(C) 2017 The LaTeX3 Project
+%% File: l3image.dtx Copyright(C) 2017-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -131,7 +131,7 @@
 %   \emph{i.e.}~every use of a bounding box will attempt to restore saved data,
 %   and saving will only take place where that is not possible.
 %   
-%   Note that the \meat{image} may not be a simple file name: a multi-page PDF,
+%   Note that the \meta{image} may not be a simple file name: a multi-page PDF,
 %   for example, will need to have the bounding box cached for each page used.
 % \end{function}
 %
