--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -891,7 +891,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\msg_moudle_name:n, \msg_see_documentation_text:n}
+% \begin{macro}[EXP]{\msg_module_name:n, \msg_see_documentation_text:n}
 %   Contextual footer information, with the potential to give modules an
 %   alternative name.
 %    \begin{macrocode}
