last minute mess up ... sigh

--- a/l3trial/xmarks/xmarks2.dtx
+++ b/l3trial/xmarks/xmarks2.dtx
@@ -235,7 +235,7 @@
         \tl_gset_eq:cN { g_@@_ #2 _top_ ##1 _tl } \g_@@_new_top_tl
         \tl_gset_eq:cN { g_@@_ #1 _top_ ##1 _tl } \g_@@_new_top_tl
 %
-        \tl_gset:No \g_@@_tmp_tl { tex_splitbotmarks:D \use:c{c_@@_class_ ##1 _int} }
+        \tl_gset:No \g_@@_tmp_tl { \tex_splitbotmarks:D \use:c{c_@@_class_ ##1 _int} }
 %    \end{macrocode}
 %    If bot mark is empty then obviously first mark too, so both
 %    becomes bot mark from last structure
