Typos [ci skip]

--- a/l3trial/xmarks/xmarks2.dtx
+++ b/l3trial/xmarks/xmarks2.dtx
@@ -85,9 +85,9 @@
 %   These functions expand to the appropriate mark \meta{entry} for
 %   the given \meta{type} in the specified \meta{region} by default
 %   \texttt{page}. The \enquote{first} and \enquote{last} marks are
-%   those seen first and last in the current dregionpage, respectively. The
+%   those seen first and last in the current region/page, respectively. The
 %   \enquote{previous} mark is the last mark of the \meta{type} seen
-%   in an earlier region, i.e. what would be \enquote{current} at the
+%   in an earlier region, i.e.what would be \enquote{current} at the
 %   very top of the region.
 %
 % \end{function}
@@ -95,7 +95,7 @@
 % ^^A footnotes not supported in function!
 %
 %   Supported regions beside \texttt{page} are \texttt{verso} and
-%   \texttt{recto} if you are producing a \enquote{twosided}
+%   \texttt{recto} if you are producing a \enquote{two-sided}
 %   document. If you are on a recto (odd) page you can then use the
 %   \texttt{verso} region to refer to the marks on the opposite
 %   page. Note, that right now this doesn't work in the opposite
@@ -112,7 +112,6 @@
 %   and \texttt{2col} refers to the left and right column region
 %   respectively.
 %
-
 %
 % \section{Code-level interface}
 %
@@ -315,7 +314,7 @@
 %   \LaTeX{} itself. An early implementation of this package used
 %   \TeX{}'s \tn{botmark} only to ensure the correct interaction with
 % the output routine (this was before the \eTeX{} mechanism was even
-%   available. However, other than in a prototype implementation for
+%   available). However, other than in a prototype implementation for
 %   \LaTeX3 this package was never made public.
 %
 % The new implementation now does use \eTeX{}'s marks as they have
@@ -325,7 +324,7 @@
 %   use in the next page. That means we do not have to maintain a
 %   global data structure that we have to keep in sync with
 %   informational marks in the galley but can rely on everything being
-%   in one place and thus manipulations (e.g. reordering of material)
+%   in one place and thus manipulations (e.g.~reordering of material)
 %   will take the marks with them without a need for updating a
 %   fragile linkage.
 
@@ -343,7 +342,7 @@
 %   is to keep  track of the real marks (from last page or
 %   more generally last region) in some global variables.
 %
-%   \item These variables are updated in the ouput routine at defined
+%   \item These variables are updated in the output routine at defined
 %   places, i.e., when we do real output processing but not if we use
 %   special output routines to do internal housekeeping.
 %
