Output box may not be 255 in LuaTeX [ci skip]

--- a/l3trial/xmarks/xmarks2.dtx
+++ b/l3trial/xmarks/xmarks2.dtx
@@ -114,7 +114,6 @@
 %
 
 %
-%
 % \section{Code-level interface}
 %
 % \begin{function}{\marks_new:n}
@@ -186,7 +185,8 @@
 %   \begin{syntax}
 %     \cs{marks_update_singlecol_structure:n} \Arg{material with marks}
 %   \end{syntax}
-%   \LaTeXe{} integration function receiving the content of box 255 for
+%   \LaTeXe{} integration function receiving the content of the output box
+%   (box~$255$, though may vary in \LuaTeX{}) for
 %   mark processing when we are doing single column documents.
 % \end{function}
 %
