@makecol hooks [ci skip]

--- a/discussionpapers/2018-11-hooks.tex
+++ b/discussionpapers/2018-11-hooks.tex
@@ -7,7 +7,7 @@
 %                        \and  
   \LaTeX{} Project Team}
 
-\date{2018-11-26}
+\date{2018-11-29}
 
 \newcounter{hook}
 
@@ -60,7 +60,7 @@ If there are several distinct use cases each could be added using
 
 \begin{hook}{heading}{before-break}
 \item
-  Near deading commands it is helpful if one can issue \cs{mark}
+  For heading commands it is helpful if one can issue \cs{mark}
   commands, e.g. \cs{PutMark} from \pkg{xmarks} to support running
   header or footer setup. This has to be possible directly after
   heading title (where it is currently supported through commands like
@@ -76,7 +76,32 @@ If there are several distinct use cases each could be added using
 \end{hook}
 
 
-%\section{}
+\section{Output routine}
+
+\subsection{Making columns}
+
+\begin{hook}{\cs{@makecol}}{pre}
+\item
+  \pkg{manyfoot} and similar packages like to take control at the very
+  beginning of column generation.
+\end{hook}
+
+\begin{hook}{\cs{@makecol}}{post}
+\item
+  And we may have some post-processing going on after the column is
+  made up.
+\end{hook}
+
+\begin{hook}{\cs{@makecol}}{prepare-footins}
+\item
+  To support manipulation of footnote text (like footnotes as paras,
+  in 2 columns etc).
+
+  The assembled footnotes are inside box \cs{footins} and any
+  manipulation needs to globally write them back in there.
+\end{hook}
+
+
 
 %\section{}
 
