--- a/l3kernel/l3color-base.dtx
+++ b/l3kernel/l3color-base.dtx
@@ -122,16 +122,12 @@
 % \end{variable}
 %
 % \begin{macro}{\color_group_begin:, \color_group_end:}
-%   Grouping for color is almost the same as using the basic \cs{group_begin:}
-%   and \cs{group_end:} functions.  However, in vertical mode the end-of-group
-%   needs a \tn{par}, which in horizontal mode does nothing.
+%   Grouping for color is the same as using the basic \cs{group_begin:}
+%   and \cs{group_end:} functions.  However, for semantic reasons, they
+%   are renamed here.
 %    \begin{macrocode}
 \cs_new_eq:NN \color_group_begin: \group_begin:
-\cs_new_protected:Npn \color_group_end:
-  {
-      \par
-    \group_end:
-  }
+\cs_new_eq:NN \color_group_end:   \group_end:
 %    \end{macrocode}
 % \end{macro}
 %
