Enable \char_generate:nn for active tokens/XeTeX
To follow \Ucharcat changes.

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1417,7 +1417,8 @@
 %   out here using a primitive-based boolean expression for speed.
 %   The final level is the basic definition at the engine level: the arguments
 %   here are integers so there is no need to worry about them too much.
-%   At present \XeTeX{} cannot generate active characters so we filter that:
+%   Older versions of  \XeTeX{} cannot generate active characters so we filter
+%   that:
 %   at some future stage that may change: the slightly odd ordering of
 %   auxiliaries reflects that.
 %    \begin{macrocode}
@@ -1446,16 +1447,19 @@
             \exp_after:wN \exp_end:
             \tex_Ucharcat:D #1 \exp_stop_f: #2 \exp_stop_f:
           }
-        \cs_new_eq:NN \@@_generate_auxii:nnw \@@_generate_aux:nnw
-        \cs_gset:Npn \@@_generate_aux:nnw #1#2#3 \exp_end:
+        \cs_if_exist:NF \tex_expanded:D
           {
-            #3
-            \if_int_compare:w #2 = 13 \exp_stop_f:
-              \__kernel_msg_expandable_error:nn { kernel } { char-active }
-            \else:
-              \@@_generate_auxii:nnw {#1} {#2}
-            \fi:
-            \exp_end:
+            \cs_new_eq:NN \@@_generate_auxii:nnw \@@_generate_aux:nnw
+            \cs_gset:Npn \@@_generate_aux:nnw #1#2#3 \exp_end:
+              {
+                #3
+                \if_int_compare:w #2 = 13 \exp_stop_f:
+                  \__kernel_msg_expandable_error:nn { kernel } { char-active }
+                \else:
+                  \@@_generate_auxii:nnw {#1} {#2}
+                \fi:
+                \exp_end:
+              }
           }
       }
   \else:
