--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -345,6 +345,13 @@ local write      = tex.write
 local utf8_char  = unicode.utf8.char
 %    \end{macrocode}
 %
+%   Deal with Con\TeX{}t: doesn't use |kpse| library.
+%    \begin{macrocode}
+if resolvers then
+  kpse_find = resolvers.findfile
+end
+%    \end{macrocode}
+%
 % \begin{macro}[int]{escapehex}
 %   An internal auxiliary to convert a string to the matching hex escape.
 %   This works on a byte basis: extension to handled UTF-8 input is
