Correct fp randint with zero argument (fixes #507)
I had thought integers are always normal fp numbers, but they can of course be
zero too

--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -421,19 +421,27 @@
         \@@_randint_auxii:wn #2 ;
         { \@@_randint_auxii:wn #1 ; \@@_randint_auxiii_o:ww }
       }
-    \cs_new:Npn \@@_randint_auxii:wn \s_@@ \@@_chk:w 1#1#2#3 ;
+    \cs_new:Npn \@@_randint_auxii:wn \s_@@ \@@_chk:w #1#2#3#4 ;
       {
-        \exp_after:wN \@@_ep_to_fixed:wwn
-        \int_value:w \@@_int_eval:w
-          #2 - \c_@@_prec_int , #3 {0000} {0000} ;
+        \if_meaning:w 0 #1
+          \exp_after:wN \use_i:nn
+        \else:
+          \exp_after:wN \use_ii:nn
+        \fi:
+        { \exp_after:wN \@@_fixed_continue:wn \c_@@_one_fixed_tl }
         {
-          \if_meaning:w 0 #1
-            \exp_after:wN \use_i:nnnn
-            \exp_after:wN \@@_fixed_add_one:wN
-          \fi:
-          \exp_after:wN \@@_fixed_sub:wwn \c_@@_one_fixed_tl
+          \exp_after:wN \@@_ep_to_fixed:wwn
+          \int_value:w \@@_int_eval:w
+            #3 - \c_@@_prec_int , #4 {0000} {0000} ;
+          {
+            \if_meaning:w 0 #2
+              \exp_after:wN \use_i:nnnn
+              \exp_after:wN \@@_fixed_add_one:wN
+            \fi:
+            \exp_after:wN \@@_fixed_sub:wwn \c_@@_one_fixed_tl
+          }
+          \@@_fixed_continue:wn
         }
-        \@@_fixed_continue:wn
       }
     \cs_new:Npn \@@_randint_auxiii_o:ww #1 ; #2 ;
       {
