Updated documentation as per 01cfc47 [ci skip]
The default value for log-declaration has been changed to false, but the documentation was not updated

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -768,13 +768,13 @@
 % \DescribeOption{log-declarations}
 % The package recognises the load-time option \texttt{log-declarations},
 % which is a key--value option taking the value \texttt{true} and
-% \texttt{false}. By default, the option is set to \texttt{true}, meaning
-% that each command or environment declared is logged. By loading
+% \texttt{false}. By default, the option is set to \texttt{false}, meaning
+% that no command or environment declared is logged. By loading
 % \pkg{xparse} using
 % \begin{verbatim}
-%   \usepackage[log-declarations=false]{xparse}
+%   \usepackage[log-declarations=true]{xparse}
 % \end{verbatim}
-% this may be suppressed and no information messages are produced.
+% each new, declared or renewed command or environment is logged.
 %
 % \section{Backwards Compatibility}
 % \label{sec:backwards}
